--- a/index.html
+++ b/index.html
@@ -35,24 +35,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@300;400;700&display=swap" rel="stylesheet">
 
     <script>
-    // This function runs when the page loads
     window.onload = function() {
-        // Get the screen width of the device
-        var screenWidth = window.innerWidth;
-
-        // Define your breakpoint (e.g., 768px is a common width for iPads and smaller devices)
-        var mobileBreakpoint = 768;
-
-        // Check if the screen is smaller than the breakpoint (mobile/ipad)
-        if (screenWidth <= mobileBreakpoint) {
-            // If the current page is the desktop version (index.html), redirect to discover.html
-            if (window.location.pathname.includes("index.html")) {
+        var mobileMediaQuery = window.matchMedia("(max-width: 768px)");
+        if (mobileMediaQuery.matches) {
+            if (window.location.href.endsWith("/") || window.location.href.includes("index.html")) {
+                console.log("Redirecting to discover.html");
                 window.location.href = "discover.html";
             }
-        } 
+        }
     };
-</script>
-
+    </script>
+    
     <style>
         /* Base styling */
         body {
