--- a/discover.html
+++ b/discover.html
@@ -215,17 +215,7 @@
             height: 100%; /* Make images take full height of the scroller */
         }
 
-        /* Adjust for minimal visibility of next image */
-        .image-scroll img::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: -10%;
-            width: 20%;
-            height: 100%;
-            background: linear-gradient(to right, transparent, #000);
-            pointer-events: none;
-        }
+
 
         /* Overview Section */
         .image-text-section {
@@ -269,12 +259,10 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 10px;
-            padding: 20px 0;
         }
 
         .masonry-text, .masonry-text-2 {
             color: #ffffff;
-            padding: 10px 0;
         }
 
         .masonry-text h2, .masonry-text-2 h2 {
@@ -520,7 +508,7 @@
         <!-- Overview Section -->
         <section class="image-text-section">
             <div class="text fade-in" style="margin-bottom: 12vh;">
-                <h2>Overview</h2>
+                <h2 style="text-align: left;">About Wonder</h2>
                 <p>Wonder is an immersive, story-driven educational game designed to enhance learning for youth and support English comprehension for non-native speakers. Set in a vibrant digital art world, players engage in interactive adventures, STEM activities, and literacy challenges. The game integrates AI and a culturally inclusive approach, aligning with educational curricula to create an engaging and effective learning experience.</p>
             </div>
             <img class="fade-in" src="./images/carousel/library.png" alt="Overview Image" loading="eager">
@@ -530,15 +518,8 @@
         <!-- Masonry Layout Section -->
         <section class="masonry-section" id="features" style="margin-bottom: 6vh;">
             <div class="masonry-text fade-in">
-                <h2 style="text-align: center;">Multilingual Literacy</h2>
+                <h2 style="">Multilingual Literacy</h2>
                 <p>Wonder features an AI-powered Reading Assistant that supports multiple languages, catering to students with varying English proficiency levels. Real-time translation and text-to-speech capabilities enable players to effortlessly navigate content and enhance comprehension. An advanced captioning system highlights key concepts with interactive, color-coded keywords that display definitions when clicked. Additionally, a comprehensive dictionary allows instant lookup of new words and phrases, making language learning intuitive and enjoyable for all students. These features expand English vocabulary and understanding, benefiting both native and non-native speakers through an immersive, inclusive learning experience.</p>
-            </div>
-            <div class="image-scroll fade-in">
-                <img src="./images/carousel/bridge.png" alt="Educational Media" loading="eager">
-                <img src="./images/carousel/earth.png" alt="Multilingual Support" loading="eager">
-                <img src="./images/carousel/library.png" alt="Interactive Features" loading="lazy">
-                <img src="./images/carousel/lighthouse.png" alt="AI Integration" loading="lazy">
-                <img src="./images/carousel/palm.png" alt="Culturally Inclusive" loading="lazy">
             </div>
         </section>
 
@@ -548,42 +529,15 @@
                 <h2>Hands-On STEM Learning</h2>
                 <p>Wonder introduces students to STEM concepts through hands-on, story-driven challenges. Using intuitive block-based coding, kids engage in virtual building and problem-solving tasks that help the story protagonist overcome obstacles. These interactive challenges make STEM learning accessible, supporting the development of problem-solving skills and basic STEM knowledge in a fun, narrative-driven way that appeals to diverse learners.</p>
             </div>
-            <div class="image-scroll fade-in">
-                <img src="./images/carousel/bridge.png" alt="Educational Media" loading="eager">
-                <img src="./images/carousel/earth.png" alt="Multilingual Support" loading="eager">
-                <img src="./images/carousel/library.png" alt="Interactive Features" loading="lazy">
-                <img src="./images/carousel/lighthouse.png" alt="AI Integration" loading="lazy">
-            </div>
         </section>
 
         <!-- Educational Integration and Impact Section -->
         <section class="image-text-section">
             <div class="text fade-in">
-                <h2>Educational Integration</h2>
+                <h2 style="text-align: left;">Educational Integration</h2>
                 <p>Wonder seeks to integrate education curriculum in collaboration with educational experts, for instance, to align with provincial standards and enable educators to integrate it into classrooms and extracurricular programs. To assess impact on student engagement and literacy outcomes, the game will incorporate research and feedback loops to highlight progress. The focus of Wonder is to benefit student learning as a versatile tool for educational settings.</p>
             </div>
         </section>
-
-        <!-- Four Image Section with Captions -->
-        <section class="four-image-section fade-in" style="margin-bottom: 12vh;">
-            <div class="image-container">
-                <img src="./images/carousel/library.png" alt="Innovation Unleashed" loading="eager">
-                <h3>Innovation Unleashed</h3>
-            </div>
-            <div class="image-container">
-                <img src="./images/carousel/lighthouse.png" alt="Discover New Perspectives" loading="eager">
-                <h3>Discover New Perspectives</h3>
-            </div>
-            <div class="image-container">
-                <img src="./images/carousel/bridge.png" alt="Endless Creativity" loading="lazy">
-                <h3>Endless Creativity</h3>
-            </div>
-            <div class="image-container">
-                <img src="./images/carousel/earth.png" alt="Limitless Imagination" loading="lazy">
-                <h3>Limitless Imagination</h3>
-            </div>
-        </section>
-
     </div>
 
     <!-- Aurora Borealis Footer Background -->
@@ -603,7 +557,6 @@
                     <h3>Contact</h3>
                     <p>
                         Email: <a href="mailto:info@playwonder.ca">info@playwonder.ca</a><br>
-                        Location: Toronto, Ontario
                     </p>
                 </div>
             </div>
