--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="styles.css" rel="stylesheet" type="text/css">
   <script>
-        if (/Mobi|Android/i.test(navigator.userAgent) && window.location.href.includes("index.html")) {
+        if (/Mobi|Android/i.test(navigator.userAgent) && (window.location.href.endsWith("/") || window.location.href.includes("index.html"))) {
             window.location.replace("discover.html");
         }
   </script>
