--- a/discover.html
+++ b/discover.html
@@ -9,14 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@300;400;700&display=swap" rel="stylesheet">
     
     <script>
-    window.onload = function() {
-        var mobileMediaQuery = window.matchMedia("(min-width: 769px)");
-        if (mobileMediaQuery.matches) {
-            if (window.location.href.includes("discover.html")) {
-                window.location.href = "index.html";
-            }
+        if (!(/Mobi|Android/i.test(navigator.userAgent)) && (window.location.href.includes("discover.html"))) {
+            window.location.replace("index.html");
         }
-    };
     </script>
 
     <style>
