--- a/index.html
+++ b/index.html
@@ -636,6 +636,16 @@
       }
     }
   </style>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7FK6SGPTYL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7FK6SGPTYL');
+</script>
   <style>
     /* Import AlgaLight Font */
     @font-face {
