--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
         <div class="footer-column">
           <h3>Contact</h3>
           <p>
-            Email: <a href="mailto:info@playwonder.ca" target="_blank"
+            Email: <a href="mailto:info@playwonder.ca"
               style="font-weight: 0; color: rgb(255, 125, 208)">info@playwonder.ca</a><br>
           </p>
         </div>
