--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
   <!-- Canonical Link -->
   <link rel="canonical" href="https://www.playwonder.ca/">
 
+  <!-- Favicon for standard browsers -->
+  <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
+
+  <!-- 16x16 favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+
+  <!-- 32x32 favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+
+  <!-- Apple touch icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+
+  <!-- Android icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./favicon/android-chrome-512x512.png">
+
   <!-- Robots Meta Tag -->
   <meta name="robots" content="index, follow">
 
