--- a/discover.html
+++ b/discover.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <title>Wonder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
+  <!-- Favicon for standard browsers -->
+  <link rel="icon" type="image/x-icon" href="./favicon/favicon.ico">
+
+  <!-- 16x16 favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+
+  <!-- 32x32 favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+
+  <!-- Apple touch icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+
+  <!-- Android icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="./favicon/android-chrome-512x512.png">
+
     <!-- Google Fonts for Helvetica Neue -->
     <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@300;400;700&display=swap" rel="stylesheet">
     
